--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ volumes:
   qdrant_storage:
 
 networks:
-  demo:
+  ai-net:
 
 x-n8n: &service-n8n
   image: n8nio/n8n:latest
-  networks: ['demo']
+  networks: ['ai-net']
   environment:
     - DB_TYPE=postgresdb
     - DB_POSTGRESDB_HOST=postgres
@@ -27,7 +27,7 @@ x-n8n: &service-n8n
 x-ollama: &service-ollama
   image: ollama/ollama:latest
   container_name: ollama
-  networks: ['demo']
+  networks: ['ai-net']
   restart: unless-stopped
   ports:
     - 11434:11434
@@ -36,7 +36,7 @@ x-ollama: &service-ollama
 
 x-init-ollama: &init-ollama
   image: ollama/ollama:latest
-  networks: ['demo']
+  networks: ['ai-net']
   container_name: ollama-pull-llama
   volumes:
     - ollama_storage:/root/.ollama
@@ -51,7 +51,7 @@ services:
   postgres:
     image: postgres:16-alpine
     hostname: postgres
-    networks: ['demo']
+    networks: ['ai-net']
     restart: unless-stopped
     environment:
       - POSTGRES_USER
@@ -72,9 +72,9 @@ services:
     entrypoint: /bin/sh
     command:
       - "-c"
-      - "n8n import:credentials --separate --input=/demo-data/credentials && n8n import:workflow --separate --input=/demo-data/workflows"
+      - "n8n import:credentials --separate --input=/ai-net-data/credentials && n8n import:workflow --separate --input=/ai-net-data/workflows"
     volumes:
-      - ./n8n/demo-data:/demo-data
+      - ./n8n/ai-net-data:/ai-net-data
     depends_on:
       postgres:
         condition: service_healthy
@@ -88,7 +88,7 @@ services:
       - 5678:5678
     volumes:
       - n8n_storage:/home/node/.n8n
-      - ./n8n/demo-data:/demo-data
+      - ./n8n/ai-net-data:/ai-net-data
       - ./shared:/data/shared
     depends_on:
       postgres:
@@ -100,7 +100,7 @@ services:
     image: qdrant/qdrant
     hostname: qdrant
     container_name: qdrant
-    networks: ['demo']
+    networks: ['ai-net']
     restart: unless-stopped
     ports:
       - 6333:6333
